--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "prosemirror-gapcursor",
-  "version": "1.0.3",
+  "name": "@jimpick/prosemirror-gapcursor",
+  "version": "1.0.3-1",
   "description": "ProseMirror plugin for cursors at normally impossible-to-reach positions",
   "license": "MIT",
   "main": "dist/index.js",
+  "module": "src/index.js",
   "style": "style/gapcursor.css",
   "dependencies": {
-    "prosemirror-keymap": "^1.0.0",
-    "prosemirror-model": "^1.0.0",
-    "prosemirror-state": "^1.0.0",
-    "prosemirror-view": "^1.0.0"
+    "@jimpick/prosemirror-keymap": "^1.0.1-1",
+    "@jimpick/prosemirror-model": "^1.6.3-1",
+    "@jimpick/prosemirror-state": "^1.2.2-4",
+    "@jimpick/prosemirror-view": "^1.6.5-4"
   },
   "devDependencies": {
     "prosemirror-commands": "^1.0.0",
